--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,19 @@ before_install:
 
 script:
   - docker run -e CI=true lrado/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+
+  region: "us-west-2"
+
+  app: "docker-react"
+
+  env: "Docker-env"
+
+  bucket_name: "elasticbeanstalk-us-west-2-306484773742834
+
+bucket_path: "docker-react"
+
+on:
+  branch: master
