--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,7 @@ bucket_path: "docker-react"
 
 on:
   branch: master
+
+acces_key_id: $AWS_ACCESS_KEY
+secret_access_key:
+  secure: "$AWS_SECRET_KEY"
